--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>SierpinskiTriangle Vincent Kuang Block 1</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>What A Triangle!</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Click 1 to make triangles bigger!
+		    Click 2 to make triangles smaller!
 	    </footer>
 	</body>
 </html>
